# makeitsquid

./: Cargo.toml
.devcontainer/: .env  Dockerfile  devcontainer.json
migrations/: 20250216015724_create_players_and_meme_templates_table.sql  20250216015724_create_players_table.sql  20250216015732_create_meme_templates.sql  20250216015743_create_meme_templates_seen_by_players.sql  20250219132102_testing_meme_templates.sql
src/: app_error.rs  app_state.rs  labeled_meme.rs  logged_in_player.rs  main.rs  player.rs  player_manager.rs  unlabeled_meme.rs
src/dto/: meme_template.rs  meme_templates_seen_by_player.rs  mod.rs  player.rs
src/templates/: index.rs  ingame.rs  lobby.rs  mod.rs
templates/: gallery.html  index.html  ingame.html  label_new_meme.html  lobby.html  new_meme.html  reaction.html  summary.html
