[package]
name = "makeitsquid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["form"] }
jsonwebtoken = "9.3.1"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["serde_derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tinytemplate = "1.2.1"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-sessions = "0.14.0"
uuid = { version = "1.13.1", features = ["v4"] }
